Build for all possible architectures
Build for all architectures supported by both Ubuntu OpenJDK 14
(amd64, arm64, armhf, i386, ppc64el, and s390x) and the base core20
Snap package (amd64, arm64, armhf, ppc64el, riscv64, and s390x).

Rewrite the 'del' part scriptlet to make it safer and more clear.

Update the README to show the error messages printed when you pass
locations outside of the home directory to the self-contained JDK
tools that run within the confined Snap environment.